# TodoPP_GUI

./: .gitmodules  CMakeLists.txt  Main.qml  Readme.md  main.cpp  todo_model.cpp  todo_model.h  todopp_interface.cpp  todopp_interface.h
